<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="PRG_HeightTest" Id="{4028f3b5-472a-4deb-9c11-e20f536945d7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_HeightTest
VAR
	//FUNCTION
	fbHeightMeasurement2						: FB_HeightMeasurement2;
	
	
	bEnable										: BOOL;
	bEnableo									: BOOL;
	bMeasurementRequest							: BOOL;
	bSet										: BOOL;
	bAcknowledge								: BOOL;
	bManualMode									: BOOL;
	bBusy										: BOOL;
	bComplete									: BOOL;

//TrigTim

	rtrigCaseTriger			: ARRAY[1..20] OF R_TRIG;
	tonCaseDelay			: ARRAY[1..10] OF TON;

	
	
END_VAR


VAR_IN_OUT
	stStationStruct          	: ST_StandardStationStruct;
	
END_VAR
VAR PERSISTENT
stHeightMeasurement2						: ST_HeightMeasurement2;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[ACT_IOLink();
ACT_TimTrig();
ACT_Statistics();
ACT_ProbesPosition();

(************** Station in Home Position **************************)
stStationStruct.bStationHomed :=  (stStationStruct.nState = 1000);

(******************************************************************)
stStationStruct.bStationComplete := stStationStruct.nState = 1220;
stStationStruct.bStationHomingRequest := stStationStruct.nState = 200;
stStationStruct.bStationWaitOnRequest := stStationStruct.nState = 1000; 
stStationStruct.bStationInitDone := stStationStruct.nState = 400;
stStationStruct.bStationInProgressInit := stStationStruct.nState >= 200 AND stStationStruct.nState <= 900;
stStationStruct.bStationInProgress :=  stStationStruct.nState > 1000 AND stStationStruct.nState < 1900;
stStationStruct.bStationWaitOnInit := stStationStruct.nState = 100; 
//stStationStruct.bStationAcknowledge := stStationStruct.nState = 200 OR stStationStruct.nState = 1100;
stStationStruct.bStationNotMoving := stStationStruct.nState = 100 OR stStationStruct.nState = 1000 OR stStationStruct.nState = 1240;
(******************************************************************)
(***************** Counter *************)


(***************************************)

IF rtrigCaseTriger[5].Q THEN
	stStationStruct.nState := 100;
END_IF

(***************************************)


CASE stStationStruct.nState OF
100:
bMeasurementRequest := FALSE;
IF stStationStruct.bStationInitRequest THEN
	stStationStruct.nState:= 300;
END_IF

300:
IF tonCaseDelay[1].Q THEN
   stStationStruct.nState:= 400;	
END_IF
400:
	stStationStruct.nState:= 1000;

//============== Homed ========================================================

1000:

IF GVL_HMI_GLOBAL.bResetPassAndFail THEN
	bEnable 			:= FALSE;
	bAcknowledge 		:= FALSE;
	bMeasurementRequest	:= FALSE;
	GVL_MASTER.stNest.bHeightPass := FALSE;
	GVL_MASTER.stNest.sHeightHMI := "";
	GVL_MASTER.stNest.bHeightReject := FALSE;

END_IF
IF stStationStruct.bStationRequest AND stStationStruct.bNoCycleStopRequest THEN
   	stStationStruct.nState := 1010;  
ELSIF (stStationStruct.bStationManualRequestHMI OR GVL_MASTER.bManualModeTrigger) AND stStationStruct.bNoCycleStopRequest THEN
   stStationStruct.nState := 4000; // Manual Mode
ELSIF stStationStruct.bStationAbort THEN
	   stStationStruct.nState := 100;	   
END_IF
1010:
bEnable := TRUE;
IF tonCaseDelay[2].Q THEN
	stStationStruct.nState:= 1100;
END_IF
1100:
IF bEnableo THEN
	stStationStruct.nState:= 1110;
END_IF
1110:
bMeasurementRequest := TRUE;
IF NOT bBusy AND bComplete THEN
	bMeasurementRequest := FALSE;
	bAcknowledge		:= TRUE;
	stStationStruct.nState:= 1120;
END_IF
1120: // JOB PASS / JOB FAIL
bAcknowledge			:= FALSE;

IF bComplete AND NOT bBusy  THEN
	GVL_MASTER.stNest.bHeightPass := GVL_HMI_GLOBAL.aGeneralPassHeightTest[5];
	GVL_MASTER.stNest.bHeightReject := GVL_HMI_GLOBAL.aGeneralFailHeightTest[5];
	
	IF GVL_MASTER.stNest.bHeightPass THEN
		GVL_MASTER.stNest.sHeightHMI 	:= "Pass";
		GVL_MASTER.stNest.bHeightPass := TRUE;
		GVL_MASTER.stNest.bHeightReject := FALSE;
	ELSIF  GVL_MASTER.stNest.bHeightReject THEN
		
		GVL_MASTER.stNest.sHeightHMI 	:= "Fail";
		GVL_MASTER.stNest.bHeightPass := FALSE;
		GVL_MASTER.stNest.bHeightReject := TRUE;
	END_IF
	
	stStationStruct.nState:= 1220;
END_IF
1220:

IF tonCaseDelay[5].Q THEN
	stStationStruct.nState:= 1240;
END_IF

1240:
IF (tonCaseDelay[3].Q AND NOT stStationStruct.bStationManualRequestHMI OR GVL_MASTER.bHeightTestacknowledge) OR NOT stStationStruct.bNoCycleStopRequest THEN
	stStationStruct.nState:= 1000;
ELSIF tonCaseDelay[3].Q AND stStationStruct.bStationManualRequestHMI AND stStationStruct.bNoCycleStopRequest THEN
	stStationStruct.nState:= 4000;
END_IF


4000:
IF NOT stStationStruct.bStationManualRequestHMI AND NOT GVL_MASTER.bManualModeTrigger THEN
	stStationStruct.nState := 1000;
	bEnable				:= FALSE;
	bManualMode			:= FALSE;
ELSIF stStationStruct.bStationAbort THEN
	 stStationStruct.nState := 100;
	 bEnable				:= FALSE;
	bManualMode			:= FALSE;
ELSE 
bManualMode			:= TRUE;
bEnable				:= TRUE;	
END_IF



END_CASE
]]></ST>
    </Implementation>
    <Action Name="ACT_IOLink" Id="{02521aef-51a8-44f1-9b2b-f577e2799daa}">
      <Implementation>
        <ST><![CDATA[
stHeightMeasurement2.aSensorCurrentValue[1]		:= DINT_TO_REAL(GVL_IO.dw_B08_DL_PN1.gt2_1_1CurrentValue);
stHeightMeasurement2.aSensorCurrentValue[2]		:= DINT_TO_REAL(GVL_IO.dw_B08_DL_PN1.gt2_1_2CurrentValue);
stHeightMeasurement2.aSensorCurrentValue[3]		:= DINT_TO_REAL(GVL_IO.dw_B08_DL_PN1.gt2_1_3CurrentValue);
stHeightMeasurement2.aSensorCurrentValue[4]		:= DINT_TO_REAL(GVL_IO.dw_B08_DL_PN1.gt2_2CurrentValue);

fbHeightMeasurement2(
	
	aSensorCurrentValue							:= stHeightMeasurement2.aSensorCurrentValue,	
	bEnable										:= bEnable,
	bMeasurementRequest							:= bMeasurementRequest,
	bSetFixedPoints								:= GVL_HMI_GLOBAL.bSetSetPointsHeightTest,
	aTolerance									:= stHeightMeasurement2.aTolerance,
	bAcknowledge								:= bAcknowledge,
	nDistanceBetweenPoints						:= stHeightMeasurement2.nDistanceBetweenPoints,
	anDistanceSetPoint							:= stHeightMeasurement2.anDistanceSetPoint,
	bManualMode									:= bManualMode,
	
	//OUTPUTS
	bBusy										=> bBusy,
	bComplete									=> bComplete,
	bEnableo									=> bEnableo,
	aPass										=> GVL_HMI_GLOBAL.aGeneralPassHeightTest ,
	aFail										=> GVL_HMI_GLOBAL.aGeneralFailHeightTest ,
	aMinLimitCalibrationBlock					=> stHeightMeasurement2.aMinLimitCalibrationBlock,
	aMaxLimitCalibrationBlock					=> stHeightMeasurement2.aMaxLimitCalibrationBlock,
	aDistanceBetweenProbes						=> stHeightMeasurement2.aDistanceBetweenProbes,
	abSensorStuck								=> stHeightMeasurement2.abSensorStuck,
	nFixedPoint									=> stHeightMeasurement2.nFixedPoint,
	aScaledSensorCurrentValue					=> stHeightMeasurement2.aScaledSensorCurrentValue,
	nHeightMeasureStateValue					=> GVL_HMI_GLOBAL.nHeightMeasureStateValue);

			

IF NOT stStationStruct.bNoCycleStopRequest THEN
	GVL_MASTER.bHeightTestacknowledge := TRUE;
END_IF






]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_ProbesPosition" Id="{1d38391f-9002-4178-b9c3-0fe508376fc1}">
      <Implementation>
        <ST><![CDATA[IF ((stHeightMeasurement2.aScaledSensorCurrentValue[1]>4)  AND 
	(stHeightMeasurement2.aScaledSensorCurrentValue[1]<9)) AND	
   ((stHeightMeasurement2.aScaledSensorCurrentValue[2]>4)  AND 
	(stHeightMeasurement2.aScaledSensorCurrentValue[2]<9)) AND
   ((stHeightMeasurement2.aScaledSensorCurrentValue[3]>4)  AND 
	(stHeightMeasurement2.aScaledSensorCurrentValue[3]<9)) AND
   ((stHeightMeasurement2.aScaledSensorCurrentValue[4]>4)  AND 
	(stHeightMeasurement2.aScaledSensorCurrentValue[4]<9)) THEN

		GVL_HMI_GLOBAL.bProbesPositionOk				:= TRUE;
ELSE 	GVL_HMI_GLOBAL.bProbesPositionOk				:= FALSE;		
	
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_Statistics" Id="{071dbf88-a729-4d04-be2b-0ec1d598bb0d}">
      <Implementation>
        <ST><![CDATA[
//GENERAL
IF rtrigCaseTriger[3].Q THEN
GVL_PERSIST.stPartsInspection.nHeightPartsGood:= GVL_PERSIST.stPartsInspection.nHeightPartsGood +1;
GVL_PERSIST.stPartsInspection.nHeightTotalPartsGood := GVL_PERSIST.stPartsInspection.nHeightTotalPartsGood+1;
ELSIF GVL_HMI_GLOBAL.bResetHeightGoodParts THEN
GVL_PERSIST.stPartsInspection.nHeightPartsGood:=0;	
END_IF


IF rtrigCaseTriger[4].Q THEN
	GVL_PERSIST.stPartsInspection.nHeightPartsFailed:=GVL_PERSIST.stPartsInspection.nHeightPartsFailed + 1;
	GVL_PERSIST.stPartsInspection.nHeightTotalPartsFailed:= GVL_PERSIST.stPartsInspection.nHeightTotalPartsFailed + 1;
ELSIF GVL_HMI_GLOBAL.bResetHeightFailParts THEN
	GVL_PERSIST.stPartsInspection.nHeightPartsFailed:=0;
END_IF


//SENSOR 1

IF rtrigCaseTriger[6].Q THEN
GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[1]:= GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[1] +1;
GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsGood[1] := GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsGood[1]+1;
ELSIF GVL_HMI_GLOBAL.aResetHeightSensorGoodParts[1] THEN
GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[1]:=0;	
END_IF


IF rtrigCaseTriger[7].Q THEN
	GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[1]:=GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[1] + 1;
	GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsFailed[1]:= GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsFailed[1] + 1;
ELSIF GVL_HMI_GLOBAL.aResetHeightSensorBadParts[1] THEN
	GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[1]:=0;
END_IF

//SENSOR 2

IF rtrigCaseTriger[8].Q THEN
GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[2]:= GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[2] +1;
GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsGood[2] := GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsGood[2]+1;
ELSIF GVL_HMI_GLOBAL.aResetHeightSensorGoodParts[2] THEN
GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[2]:=0;	
END_IF


IF rtrigCaseTriger[9].Q THEN
	GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[2]:=GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[2] + 1;
	GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsFailed[2]:= GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsFailed[2] + 1;
ELSIF GVL_HMI_GLOBAL.aResetHeightSensorBadParts[2] THEN
	GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[2]:=0;
END_IF

//SENSOR 3

IF rtrigCaseTriger[10].Q THEN
GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[3]:= GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[3] +1;
GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsGood[3] := GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsGood[3]+1;
ELSIF GVL_HMI_GLOBAL.aResetHeightSensorGoodParts[3] THEN
GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[3]:=0;	
END_IF


IF rtrigCaseTriger[11].Q THEN
	GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[3]:=GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[3] + 1;
	GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsFailed[3]:= GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsFailed[3] + 1;
ELSIF GVL_HMI_GLOBAL.aResetHeightSensorBadParts[3] THEN
	GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[3]:=0;
END_IF

//SENSOR 4

IF rtrigCaseTriger[12].Q THEN
GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[4]:= GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[4] +1;
GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsGood[4] := GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsGood[4]+1;
ELSIF GVL_HMI_GLOBAL.aResetHeightSensorGoodParts[4] THEN
GVL_PERSIST.stPartsInspection.nHeightSensorPartsGood[4]:=0;	
END_IF


IF rtrigCaseTriger[13].Q THEN
	GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[4]:=GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[4] + 1;
	GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsFailed[4]:= GVL_PERSIST.stPartsInspection.nHeightSensorTotalPartsFailed[4] + 1;
ELSIF GVL_HMI_GLOBAL.aResetHeightSensorBadParts[4] THEN
	GVL_PERSIST.stPartsInspection.nHeightSensorPartsFailed[4]:=0;
END_IF]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_TimTrig" Id="{0f24552a-aac3-477b-9402-5cc951958164}">
      <Implementation>
        <ST><![CDATA[tonCaseDelay[1](IN:= (stStationStruct.nState=300),PT:=T#50MS);
tonCaseDelay[2](IN:= (stStationStruct.nState=1010),PT:=T#100MS);
tonCaseDelay[3](IN:= (stStationStruct.nState=1240),PT:=T#100MS);
tonCaseDelay[4](IN:= ,PT:=T#1S);
tonCaseDelay[5](IN:=stStationStruct.nState=1220 ,PT:=T#2S);
tonCaseDelay[6](IN:= ,PT:=T#250MS);
tonCaseDelay[7](IN:= ,PT:=T#50MS);
tonCaseDelay[8](IN:= ,PT:=T#250MS);
tonCaseDelay[9](IN:= ,PT:=T#250MS);
tonCaseDelay[10](IN:= ,PT:=T#250MS);

rtrigCaseTriger[1](clk:= );
rtrigCaseTriger[2](clk:= );
rtrigCaseTriger[3](clk:= (stStationStruct.nState=1240) AND GVL_MASTER.stNest.bHeightPass );//
rtrigCaseTriger[4](clk:= (stStationStruct.nState=1240) AND NOT GVL_MASTER.stNest.bHeightPass );//
rtrigCaseTriger[5](clk:= stStationStruct.bStationAbort);
rtrigCaseTriger[6](clk:= (stStationStruct.nState=1240) AND GVL_HMI_GLOBAL.aGeneralPassHeightTest[1]);
rtrigCaseTriger[7](clk:= (stStationStruct.nState=1240) AND GVL_HMI_GLOBAL.aGeneralFailHeightTest[1]);
rtrigCaseTriger[8](clk:= (stStationStruct.nState=1240) AND GVL_HMI_GLOBAL.aGeneralPassHeightTest[2]);
rtrigCaseTriger[9](clk:= (stStationStruct.nState=1240) AND GVL_HMI_GLOBAL.aGeneralPassHeightTest[2]);
rtrigCaseTriger[10](clk:= (stStationStruct.nState=1240) AND GVL_HMI_GLOBAL.aGeneralPassHeightTest[3]);
rtrigCaseTriger[11](clk:= (stStationStruct.nState=1240) AND GVL_HMI_GLOBAL.aGeneralPassHeightTest[3]);
rtrigCaseTriger[12](clk:= (stStationStruct.nState=1240) AND GVL_HMI_GLOBAL.aGeneralPassHeightTest[4]);
rtrigCaseTriger[13](clk:= (stStationStruct.nState=1240) AND GVL_HMI_GLOBAL.aGeneralPassHeightTest[4]);

]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="PRG_HeightTest">
      <LineId Id="24" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="1088" Count="0" />
      <LineId Id="1225" Count="0" />
      <LineId Id="27" Count="15" />
      <LineId Id="56" Count="0" />
      <LineId Id="59" Count="10" />
      <LineId Id="388" Count="0" />
      <LineId Id="1131" Count="0" />
      <LineId Id="394" Count="1" />
      <LineId Id="87" Count="0" />
      <LineId Id="437" Count="0" />
      <LineId Id="447" Count="2" />
      <LineId Id="446" Count="0" />
      <LineId Id="455" Count="0" />
      <LineId Id="458" Count="0" />
      <LineId Id="456" Count="0" />
      <LineId Id="397" Count="0" />
      <LineId Id="461" Count="0" />
      <LineId Id="945" Count="0" />
      <LineId Id="671" Count="0" />
      <LineId Id="467" Count="0" />
      <LineId Id="1179" Count="1" />
      <LineId Id="1178" Count="0" />
      <LineId Id="1192" Count="1" />
      <LineId Id="1191" Count="0" />
      <LineId Id="1004" Count="1" />
      <LineId Id="474" Count="5" />
      <LineId Id="460" Count="0" />
      <LineId Id="480" Count="1" />
      <LineId Id="491" Count="1" />
      <LineId Id="459" Count="0" />
      <LineId Id="494" Count="0" />
      <LineId Id="849" Count="3" />
      <LineId Id="1182" Count="4" />
      <LineId Id="497" Count="0" />
      <LineId Id="505" Count="0" />
      <LineId Id="1047" Count="0" />
      <LineId Id="1187" Count="0" />
      <LineId Id="503" Count="0" />
      <LineId Id="854" Count="1" />
      <LineId Id="1048" Count="0" />
      <LineId Id="948" Count="1" />
      <LineId Id="954" Count="1" />
      <LineId Id="951" Count="0" />
      <LineId Id="958" Count="0" />
      <LineId Id="953" Count="0" />
      <LineId Id="956" Count="1" />
      <LineId Id="950" Count="0" />
      <LineId Id="952" Count="0" />
      <LineId Id="504" Count="0" />
      <LineId Id="502" Count="0" />
      <LineId Id="938" Count="0" />
      <LineId Id="942" Count="0" />
      <LineId Id="939" Count="2" />
      <LineId Id="841" Count="0" />
      <LineId Id="528" Count="0" />
      <LineId Id="531" Count="1" />
      <LineId Id="620" Count="2" />
      <LineId Id="944" Count="0" />
      <LineId Id="943" Count="0" />
      <LineId Id="566" Count="2" />
      <LineId Id="897" Count="0" />
      <LineId Id="1001" Count="0" />
      <LineId Id="843" Count="1" />
      <LineId Id="898" Count="0" />
      <LineId Id="1003" Count="0" />
      <LineId Id="846" Count="0" />
      <LineId Id="895" Count="1" />
      <LineId Id="845" Count="0" />
      <LineId Id="842" Count="0" />
      <LineId Id="541" Count="0" />
      <LineId Id="555" Count="0" />
      <LineId Id="382" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_HeightTest.ACT_IOLink">
      <LineId Id="88" Count="31" />
      <LineId Id="54" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="77" Count="1" />
      <LineId Id="44" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="20" Count="1" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="PRG_HeightTest.ACT_ProbesPosition">
      <LineId Id="1" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="5" Count="4" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="PRG_HeightTest.ACT_Statistics">
      <LineId Id="30" Count="1" />
      <LineId Id="2" Count="12" />
      <LineId Id="1" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="16" Count="13" />
      <LineId Id="15" Count="0" />
      <LineId Id="36" Count="15" />
      <LineId Id="35" Count="0" />
      <LineId Id="53" Count="15" />
      <LineId Id="52" Count="0" />
      <LineId Id="70" Count="15" />
      <LineId Id="69" Count="0" />
    </LineIds>
    <LineIds Name="PRG_HeightTest.ACT_TimTrig">
      <LineId Id="2" Count="19" />
      <LineId Id="24" Count="2" />
      <LineId Id="1" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>